verification/output/openjdk_21/invalid/ReturnTypeMismatch.txt
/data/projects/rajac/verification/sources_invalid/typecheck/ReturnTypeMismatch.java:3: error: incompatible types: boolean cannot be converted to int
        return true;
               ^
1 error
